add img folder with images of cajun rice and biscuit gravy. Add cajun rice and biscuit gravy html page with recipe image description, ingredient list, and steps.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <body>
        <h1>Odin Recipes</h1> 
-       <a href="./recipes/biscutgravy.html">Biscuts and Gravy</a>
-       <a href="./recipes/cajunrice.html">Cajun Rice with Shrimp</a>
+       <p><a href="./recipes/biscuitgravy.html">Biscuts and Gravy</a></p>
+       <p><a href="./recipes/cajunrice.html">Cajun Rice with Shrimp</a></p>
     </body>
 </html>
