--- a/recipes/cajunrice.html
+++ b/recipes/cajunrice.html
@@ -6,5 +6,32 @@
 
     <body>
        <h1>Cajun Rice with Shrimp</h1> 
+       <img src="../img/cajunrice.jpg" alt="Cajun Rice withe Shrimp" style="width:300px;height:250px">
+       <h2>Delicious Cajun Rice with Shrimp and Vegetables!</h2>
+       <p>This easy, 30 minute recipe is the perfect busy week night meal. White rice loaded with shrimp, beans, peppers, onion, and tomatoes. It's sure to be a hit with even the pickiest eaters!</p>
+       <h3>Ingredients</h3>
+       <ul>
+           <li>Half a pound of raw shrimp</li>
+           <li>2 cups dry white rice</li>
+           <li>1 onion</li>
+           <li>1 green pepper</li>
+           <li>1 can diced tomatoes</li>
+           <li>1 can dark red kisney beans</li>
+           <li>1 tbsp cajun seasoning</li>
+           <li>3 and a half cups of water</li>
+       </ul>
+       <h3>Steps</h3>
+       <ol>
+           <li>Coat a large pan with oil and set heat to medium.</li>
+           <li>While the opan is heating, chop the onion and pepper into small, bite sized pieces.</li>
+           <li>Place chopped pepper and onion into pan and lower head to medium low.</li>
+           <li>Let the vegetables cook until they start to sweat, stiring occasionally. About 5 minutes</li>
+           <li>Add the drained and rinsed canned kidney beans to the pan and stir.</li>
+           <li>Add the canned tomatoes into the pan and stir.</li>
+           <li>add the water and cajun seasoning. Stir well.</li>
+           <li>Let the mixture come to a boil, then set the heat to low, cover, and let cook for 15 minutes.</li>
+           <li>After 15 minutes, add the shrimp and cook for another 5 minutes covered. Push the shrimp into the rice until they are covered.</li>
+           <li>Once all the liquid has absorbed and the shrimp are cooked through, turn the heat off and serve.</li>
+       </ol>
     </body>
 </html>
